Cambio parametro en el title de code porque en el viewer del chrome se veía (con cierto zoom) un mini marco.

--- a/languages.tex
+++ b/languages.tex
@@ -71,7 +71,7 @@
  listing remove caption=false,
  attach boxed title to bottom center={yshift=-8pt},
  before skip=15pt plus 2pt,after skip=15pt plus 2pt,
- boxed title style={enhanced jigsaw, colback=white, sharp corners, boxrule=0pt},
+ boxed title style={empty, colback=white, sharp corners, boxrule=0cm},
  coltitle=black,
  overlay first app={%
    \draw[dashed,line width=0.75pt,xshift=0.75pt] (frame.south east) -- (frame.south west); % chktex 8
